--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^5.8.0+1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.1
+  path_provider: ^2.1.5
+  freezed_annotation: ^3.0.0
+  injectable: ^2.5.0
+  bloc: ^9.0.0
+  build_runner: ^2.4.15
+  freezed: ^3.0.0-0.0.dev
 
 dev_dependencies:
   flutter_test:
