--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   bloc: ^9.0.0
   build_runner: ^2.4.15
   freezed: ^3.0.0-0.0.dev
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
