--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   build_runner: ^2.4.15
   freezed: ^3.0.0-0.0.dev
   equatable: ^2.0.7
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
